--- Fixed a bug that could retrieve questionnaire filters     --- Reordered the patient filter on templates

--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -121,7 +121,7 @@
 			<div uib-accordion-group is-open="statusFilterPatient.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Filter Patiens </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterPatient.open, 'glyphicon-chevron-right': !statusFilterPatient.open}"></i>
+						<strong>Filter Patients </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterPatient.open, 'glyphicon-chevron-right': !statusFilterPatient.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
