--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -175,7 +175,7 @@
                         <span ng-if="checkTermsAdded(termList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Aliased Expressions</strong>
+                        <strong>Internal Hospital Code</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': terms.open, 'glyphicon-chevron-right': !terms.open}" ng-if="checkTermsAdded(termList)"></i>
@@ -440,7 +440,7 @@
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="fa fa-dot-circle-o"></span>
-                    <h2>Aliased Expressions</h2>
+                    <h2>Internal Hospital Code</h2>
                   </span>  
                 </div>  
               </div>
@@ -449,14 +449,14 @@
               <div class="col-md-12">
                 <p style="margin-bottom: 10px;">
                   <span style="color:#d9534f"><strong>Required field:</strong></span>
-                  Please add expressions to alias.
+                  Please add internal hospital code alias.
                 </p>
               </div>
             </div>  
             <div class="row animated" ng-class="{fadeInUp: terms.show}" ng-if="terms.show"> 
               <div class="col-md-9">
                 <div class="panel" ng-class="checkTermsAdded(termList) ? 'panel-success': 'panel-danger'">
-                  <div class="panel-heading"><strong>Expression List</strong>
+                  <div class="panel-heading"><strong>Internal Hospital Code List</strong>
                     <span ng-hide="checkTermsAdded(termList)" style="float:right"><em>Incomplete</em></span>
                     <span ng-show="checkTermsAdded(termList)" style="float:right"><em>Complete</em></span>
                   </div>
@@ -480,7 +480,7 @@
                       </ul>
                     </div>
                     <div style="text-align:center" ng-hide="newAlias.source_db && newAlias.type">
-                      <h1>Please select a source database AND assign an alias type!</h1>
+                      <h1>Please select a source database AND assign an internal hospital code type!</h1>
                     </div>
                   </div>
                 </div>
