--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -305,15 +305,15 @@
               </div>
             </div>
           </div>     
-          <!-- SECTION: Expression filters -->
+          <!-- SECTION: Expression filters / Internal Hospital Code -->
           <div uib-accordion-group is-open="statusExpressionFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Terms </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
+                <strong>Filter Internal Hospital Code</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
-              <h4>Current Terms</h4>
+              <h4>Current Internal Hospital Code</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(termList)">
                   All Terms
@@ -322,7 +322,7 @@
                   {{selectedTerm.name}}
                 </li>
               </ul>
-              <p>To add/remove term filter, use the list below.</p>
+              <p>To add/remove internal hospital code filter, use the list below.</p>
             </div>
             <div class="list-space">
               <div class="input-group">
